--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ET TECH X 2026 | India's Premier Education & Technology Expo</title>
-    <meta name="description" content="Join 10,000+ educators and tech leaders at ET TECH X 2026 - India's largest summit on educational technology. September 22-24, Yashobhoomi, New Delhi." />
+    <title>ET TECH X 2025 | India's Premier Education & Technology Expo</title>
+    <meta name="description" content="Join 8,000+ trade professionals at ET TECH X 2025 - India's leading summit on educational equipment and solutions. December 11-13, HITEX Exhibition Centre, Hyderabad." />
     <meta name="keywords" content="EdTech, Education Technology, Conference, Expo, India, ET TECH X, Educational Summit, Innovation" />
     <meta name="author" content="ET TECH X" />
 
-    <meta property="og:title" content="ET TECH X 2026 | Where Education Meets Innovation" />
-    <meta property="og:description" content="India's Premier Education & Technology Expo. September 22-24, 2026 at Yashobhoomi, New Delhi." />
+    <meta property="og:title" content="ET TECH X 2025 | Where Business Meets Innovation" />
+    <meta property="og:description" content="India's Leading Summit on Educational Equipment and Education Solutions. December 11-13, 2025 at HITEX Exhibition Centre, Hyderabad." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
