--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <title>ET TECH X 2025 | India's Premier Education & Technology Expo</title>
     <meta name="description" content="Join 8,000+ trade professionals at ET TECH X 2025 - India's leading summit on educational equipment and solutions. December 11-13, HITEX Exhibition Centre, Hyderabad." />
     <meta name="keywords" content="EdTech, Education Technology, Conference, Expo, India, ET TECH X, Educational Summit, Innovation" />
